--- a/src/css/components/_card.scss
+++ b/src/css/components/_card.scss
@@ -1,34 +1,60 @@
 @use "../partials/functions" as f;
-.card {
-  width: f.rem(320);
-  border-radius: f.rem(6);
-  border: solid thin var(--lightgrey);
-  padding: f.rem(20);
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  gap: f.rem(10);
-  align-items: flex-start;
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  &__image {
-    display: block;
+@layer components {
+  .card {
     width: f.rem(320);
-    max-width: unset;
-    margin-block: f.rem(-20) f.rem(10);
-    margin-inline: f.rem(-20);
-    aspect-ratio: 320/200;
-    object-fit: cover;
-  }
-  &__title {
-    font-size: f.rem(20);
-    line-height: f.rem(24);
-    font-weight: 600;
-    margin-block: 0;
-  }
-  &__text {
-    margin-block: 0;
-    font-size: f.rem(16);
-    line-height: f.rem(24);
+    border-radius: f.rem(6);
+    border: solid thin var(--lightgrey);
+    padding: f.rem(20);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: f.rem(10);
+    align-items: flex-start;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    &__image {
+      display: block;
+      width: f.rem(320);
+      max-width: unset;
+      margin-block: f.rem(-20) f.rem(10);
+      margin-inline: f.rem(-20);
+      aspect-ratio: 320/200;
+      object-fit: cover;
+    }
+    &__title {
+      font-size: f.rem(20);
+      line-height: f.rem(24);
+      font-weight: 600;
+      margin-block: 0;
+    }
+    &__text {
+      margin-block: 0;
+      font-size: f.rem(16);
+      line-height: f.rem(24);
+    }
+    &--full {
+      position: relative;
+      padding-top: f.rem(220);
+      & > * {
+        position: relative;
+        z-index: 1;
+      }
+      .card__image {
+        position: absolute;
+        z-index: 0;
+        inset: 0;
+        aspect-ratio: unset;
+        margin: unset;
+        width: 100%;
+        height: 100%;
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        z-index: 1;
+        inset: 0;
+        background: linear-gradient(0deg, var(--bg-color), color-mix(in srgb, var(--bg-color) 0%, transparent));
+      }
+    }
   }
 }
