--- a/src/css/partials/_globals.scss
+++ b/src/css/partials/_globals.scss
@@ -1,42 +1,53 @@
 @use "fonts" as f;
 @use "variables" as v;
 @use "sass:color";
+@layer base {
+  :root {
+    --spacing: #{v.$spacing};
 
-:root {
-  @each $name, $value in v.$colors {
-    --#{$name}: #{$value};
-    @if ($name == "black") {
-      --#{$name}-hover: #{color.scale($value, $lightness: 20%)};
-    } @else {
-      --#{$name}-hover: #{color.scale($value, $lightness: -20%)};
+    @each $name, $value in v.$colors {
+      --#{$name}: #{$value};
+      @if ($name == "black") {
+        --#{$name}-hover: #{color.scale($value, $lightness: 20%)};
+      } @else {
+        --#{$name}-hover: #{color.scale($value, $lightness: -20%)};
+      }
+    }
+
+    @each $colorName, $colorValue in v.$colors {
+      $hue: color.channel($colorValue, "hue", hsl);
+      // $saturation
+      // $lightness
+
+      // parcourir la map des $shades
+    }
+
+    /* variables couleurs agnostiques (serait bien de les générer avec sass... */
+    --text-color: var(--black-hover); // nom de variable bizarre !! On fait avec ce qu'on a :)
+    --bg-color: var(--white);
+
+    @media (prefers-color-scheme: dark) {
+      --text-color: var(--white);
+      --bg-color: var(--black-hover);
     }
   }
 
-  /* variables couleurs agnostiques (serait bien de les générer avec sass... */
-  --text-color: var(--black-hover); // nom de variable bizarre !!
-  --bg-color: var(--white);
-
-  @media (prefers-color-scheme: dark) {
-    --text-color: var(--white); // nom de variable bizarre !!
-    --bg-color: var(--black-hover);
+  body {
+    font-family: f.$mainFont;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    &.halloween {
+      --text-color: var(--black); // nom de variable bizarre !!
+      --bg-color: orange;
+    }
+    &[data-theme="dark"] {
+      --text-color: var(--white); // nom de variable bizarre !!
+      --bg-color: var(--black-hover);
+    }
   }
-}
 
-body {
-  font-family: f.$mainFont;
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  &.halloween {
-    --text-color: var(--black); // nom de variable bizarre !!
-    --bg-color: orange;
+  img {
+    max-width: 100%;
+    height: auto;
   }
-  &[data-theme="dark"] {
-    --text-color: var(--white); // nom de variable bizarre !!
-    --bg-color: var(--black-hover);
-  }
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
