--- a/src/css/partials/_variables.scss
+++ b/src/css/partials/_variables.scss
@@ -16,3 +16,17 @@ $breakpoints: (
   "xl": 1200px,
   "xxl": 1400px,
 );
+
+$shades: (
+  950: 12%,
+  900: 20%,
+  800: 28%,
+  700: 35%,
+  600: 50%,
+  500: 60%,
+  400: 71%,
+  300: 82%,
+  200: 90%,
+  100: 95%,
+  50: 98%,
+);
