--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,5 +6,6 @@
 @use "partials/utilities";
 
 @use "components/container";
+@use "components/grid";
 @use "components/button";
 @use "components/card";
